--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
 <!-- Footer -->
 <div class="footer">
     <a href="#"><h4>Work with me</h4></a>
-    <!-- Insert social icons here-->
+    <div class="push">
+        <a href="instragram.com"><img src="icons/instagram-icon.png" target="_blank"></a>
+        <a href="linkedin.com"><img src="icons/linkedin-icon.jpg" target="_blank"></a>
+        <a href="behance.net"><img src="icons/behance-icon.png" target="_blank"></a>
+    </div>
     <button onclick="topFunction()" id="top" title="Go to top"><h4>Back to top</h4></button>
 </div>
 </body>
