--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 <div class="footer">
     <a href="#"><h4>Work with me</h4></a>
     <div class="push">
-        <a href="instragram.com"><img src="icons/instagram-icon.png" target="_blank"></a>
-        <a href="linkedin.com"><img src="icons/linkedin-icon.jpg" target="_blank"></a>
-        <a href="behance.net"><img src="icons/behance-icon.png" target="_blank"></a>
+        <a href="https://www.linkedin.com/in/margaret-rose-grayson/" target="_blank"><img src="icons/linkedin-icon.jpg"></a>
+        <a href="https://www.behance.net/margaret-rose" target="_blank"><img src="icons/behance-icon.png"></a>
+        <button onclick="topFunction()" id="top" title="Go to top"><h4>Back to top</h4></button>
     </div>
-    <button onclick="topFunction()" id="top" title="Go to top"><h4>Back to top</h4></button>
+    
 </div>
 </body>
 </html>
