--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <!-- Footer -->
 <div class="footer">
     <a href="#"><h4>Work with me</h4></a>
-    <div class="push">
+    <div class="social">
         <a href="https://www.linkedin.com/in/margaret-rose-grayson/" target="_blank"><img src="icons/linkedin-icon.jpg"></a>
         <a href="https://www.behance.net/margaret-rose" target="_blank"><img src="icons/behance-icon.png"></a>
         <button onclick="topFunction()" id="top" title="Go to top"><h4>Back to top</h4></button>
