--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="css/style.css" type="text/css" rel="stylesheet">
+  <link href="CSS/style.css" type="text/css" rel="stylesheet">
   <link href="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300&display=swap" rel="stylesheet">
 </head>
@@ -9,7 +9,7 @@
 <body style="margin: 0;">
 <!-- Nav HTML -->
 <div class="nav">
-    <div class="logo"><a href="#"><img src="images/Logo.png"></a></div>
+    <div class="logo"><a href="#"><img src="Images/Logo.png"></a></div>
     <div class="push">
          <a href="#">Projects</a>
          <a href="#">About</a>
@@ -17,11 +17,10 @@
     </div>
 </div>
 <!-- Hero Section -->
-<div class="panel" data-color="pink">
 <div class="hero">
     <h1>Hello &amp Bonjour</h1>
     <a href="#"><h3>Learn about me</h3><img src="icons/arrow-right-solid.svg"></a>
-    <div class="heroRight"><img src="images/Margaret.jpg"></div>
+    <div class="heroRight"><img src="Images/Margaret.jpg"></div>
 </div>
 </div>
 <!-- Case Study 1 -->
@@ -30,7 +29,7 @@
     <h2>Simplifying the FTC</h2>
     <h3>A responsive web redesign</h3>
   </div>
-    <div class="mockup-ftc"><img src="images/FTC.png"></div>
+    <div class="mockup-ftc"><img src="Images/FTC.png"></div>
   </a>
 </div>
 <!-- Case Study 2 -->
@@ -39,7 +38,7 @@
     <h2>A Hoppy Tail of Adoption</h2>
     <h3>A responsive web redesign</h3>
   </div>
-    <div class="mockup-achr"><img src="images/ACHR.png"></div>
+    <div class="mockup-achr"><img src="Images/ACHR.png"></div>
   </a>
 </div>
 <!-- Case Study 3 -->
@@ -48,7 +47,7 @@
     <h2>Finding the Balance</h2>
     <h3>A mobile app design</h3>
   </div>
-    <div class="mockup-equil"><img src="images/Equil.png"></div>
+    <div class="mockup-equil"><img src="Images/Equil.png"></div>
   </a>
 </div>
 <!-- Footer -->
